# programmiersprachen-aufgabe-1

source/: CMakeLists.txt  aufgabe1_10.cpp  aufgabe1_11.cpp  aufgabe1_12.cpp  aufgabe1_13.cpp  aufgabe1_14.cpp  aufgabe1_15.cpp  aufgabe1_3.cpp  aufgabe1_8.cpp  aufgabe1_9.cpp
